// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web-to-react-native-style support background 1`] = `
Object {
  "backgroundColor": "#fff",
}
`;

exports[`web-to-react-native-style support border 1`] = `
Object {
  "borderColor": "red",
  "borderStyle": "solid",
  "borderWidth": 10,
}
`;

exports[`web-to-react-native-style support border-color 1`] = `
Object {
  "borderBottomColor": "red",
  "borderLeftColor": "#f015ca",
  "borderRightColor": "#f015ca",
  "borderTopColor": "red",
}
`;

exports[`web-to-react-native-style support border-radius 1`] = `
Object {
  "borderBottomLeftRadius": 2,
  "borderBottomRightRadius": 1,
  "borderTopLeftRadius": 1,
  "borderTopRightRadius": 2,
}
`;

exports[`web-to-react-native-style support border-width 1`] = `
Object {
  "borderBottomWidth": 2,
  "borderLeftWidth": 5,
  "borderRightWidth": 5,
  "borderTopWidth": 2,
}
`;

exports[`web-to-react-native-style support box-shadow 1`] = `
Object {
  "overflow": "visible",
  "shadowColor": "black;",
  "shadowOffset": Object {
    "height": 5,
    "width": 10,
  },
  "shadowOpacity": 1,
  "shadowRadius": 5,
}
`;

exports[`web-to-react-native-style support flex 1`] = `
Object {
  "flex": 2,
}
`;

exports[`web-to-react-native-style support flex 2`] = `
Object {
  "flexGrow": 1,
  "flexShrink": 2,
}
`;

exports[`web-to-react-native-style support flex 3`] = `
Object {
  "flexBasis": 2,
  "flexGrow": 1,
  "flexShrink": 0,
}
`;

exports[`web-to-react-native-style support font-family 1`] = `
Object {
  "fontFamily": "lucida grande",
}
`;

exports[`web-to-react-native-style support font-weight 1`] = `
Object {
  "fontWeight": "10",
}
`;

exports[`web-to-react-native-style support margin 1`] = `
Object {
  "marginBottom": 10,
  "marginLeft": 4,
  "marginRight": 4,
  "marginTop": 10,
}
`;

exports[`web-to-react-native-style support padding 1`] = `
Object {
  "paddingBottom": 10,
  "paddingLeft": 4,
  "paddingRight": 4,
  "paddingTop": 10,
}
`;

exports[`web-to-react-native-style support text-shadow 1`] = `
Object {
  "textShadowColor": "black;",
  "textShadowOffset": Object {
    "height": 5,
    "width": 10,
  },
  "textShadowRadius": 5,
}
`;

exports[`web-to-react-native-style support transform 1`] = `
Object {
  "transform": Array [
    Object {
      "translateX": 12,
    },
    Object {
      "translateY": "50%",
    },
    Object {
      "scaleX": 2,
    },
    Object {
      "scaleY": 0.5,
    },
    Object {
      "rotateZ": "10deg",
    },
  ],
}
`;
